# enoki_wrapped_token

./: Cargo.toml  Makefile  README.md  canister_ids.json  default.env  dfx.1.json  dfx.json
benchmarks/benchmark_transactions/: dfx.js  index.js  package.json  parameters.json  stats.ic.json  stats.json  stats.local.json  timer.js  users.js  utils.js
scripts/: generate_dfx_json.js  initalize_local_balance.sh  install.sh  install_dependencies.sh  update_dfx.sh
src/enoki_wrapped_token/: Cargo.toml  build.sh  deploy.sh  enoki_wrapped_token.did
src/enoki_wrapped_token/src/: accounts.rs  main.rs  management.rs  metadata.rs  shards.rs  stable.rs  types.rs  upgrade.rs
src/enoki_wrapped_token_shard/: Cargo.toml  build.sh  deploy.sh  enoki_wrapped_token_shard.did
src/enoki_wrapped_token_shard/src/: balances.rs  fees.rs  main.rs  management.rs  mint.rs  stable.rs  upgrade.rs
src/enoki_wrapped_token_shard/src/interfaces/: dip20.rs  mod.rs
src/enoki_wrapped_token_shared/: Cargo.toml
src/enoki_wrapped_token_shared/src/: types.rs
src_dev/DIP20/rust/: deploy.sh
tests/: sample_test.sh  setup.sh  test.sh
tests/mock_exchange/: Cargo.toml  build.sh  deploy.sh  mock_exchange.did
tests/mock_exchange/src/: main.rs
